@@ -17,10 +17,8 @@ import static org.openhab.binding.dsmr.internal.meter.DSMRMeterType.*;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
 
@@ -29,7 +27,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.openhab.binding.dsmr.internal.TelegramReaderUtil;
 import org.openhab.binding.dsmr.internal.device.cosem.CosemObject;
-import org.openhab.binding.dsmr.internal.device.cosem.CosemObjectType;
 import org.openhab.binding.dsmr.internal.device.p1telegram.P1Telegram;
 import org.openhab.binding.dsmr.internal.device.p1telegram.P1Telegram.TelegramState;
 import org.openhab.binding.dsmr.internal.meter.DSMRMeterDescriptor;
@@ -51,6 +48,7 @@ public class DSMRMeterDetectorTest {
             { "dsmr_42", EnumSet.of( DEVICE_V4, ELECTRICITY_V4_2, M3_V5_0)},
             { "dsmr_50", EnumSet.of( DEVICE_V5, ELECTRICITY_V5_0, M3_V5_0)},
             { "flu5", EnumSet.of( DEVICE_EMUCS_V1_0, ELECTRICITY_EMUCS_V1_0, GAS_EMUCS_V1_0)},
+            { "flu5_extra", EnumSet.of( DEVICE_EMUCS_V1_0, ELECTRICITY_EMUCS_V1_0, GAS_EMUCS_V1_0)},
             { "Iskra_AM550", EnumSet.of( DEVICE_V5, ELECTRICITY_V5_0, M3_V5_0)},
             { "Landis_Gyr_E350", EnumSet.of( DEVICE_V2_V3, ELECTRICITY_V3_0)},
             { "Landis_Gyr_ZCF110", EnumSet.of( DEVICE_V4, ELECTRICITY_V4_2, M3_V5_0)},
@@ -66,19 +64,15 @@ public class DSMRMeterDetectorTest {
     public void testDetectMeters(final String telegramName, final Set<DSMRMeterType> expectedMeters) {
         P1Telegram telegram = TelegramReaderUtil.readTelegram(telegramName, TelegramState.OK);
         DSMRMeterDetector detector = new DSMRMeterDetector();
-        Entry<Collection<DSMRMeterDescriptor>, Map<CosemObjectType, CosemObject>> entry = detector
-                .detectMeters(telegram);
+        Entry<Collection<DSMRMeterDescriptor>, List<CosemObject>> entry = detector.detectMeters(telegram);
         Collection<DSMRMeterDescriptor> detectMeters = entry.getKey();
 
         assertEquals(expectedMeters.size(), detectMeters.size(),
                 "Should detect correct number of meters: " + Arrays.toString(detectMeters.toArray()));
-        assertEquals(Collections.emptyMap(), entry.getValue(), "Should not have any undetected cosem objects: ");
-        assertEquals(Collections.emptyList(), telegram.getUnknownCosemObjects(),
-                "Should not have any unknown cosem objects");
+        assertEquals(List.of(), entry.getValue(), "Should not have any undetected cosem objects: ");
+        assertEquals(List.of(), telegram.getUnknownCosemObjects(), "Should not have any unknown cosem objects");
         for (DSMRMeterType meter : expectedMeters) {
-            assertEquals(
-
-                    1, detectMeters.stream().filter(e -> e.getMeterType() == meter).count(),
+            assertEquals(1, detectMeters.stream().filter(e -> e.getMeterType() == meter).count(),
                     String.format("Meter '%s' not found: %s", meter,
                             Arrays.toString(detectMeters.toArray(new DSMRMeterDescriptor[0]))));
         }
